Added My Custom Tag

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "homepage": "http://www.magentocommerce.com/magento-connect/2984.html",
     "authors": [
         {
-            "name": "Alex Headley",
-            "email": "aheadley@nexcess.net"
+            "name": "hgati",
+            "email": "cobays@gmail.com"
         }
     ],
     "replace": {
